update with github link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ window.onload = function() {
 };
 
 </script>
+Fork on <a href="https://github.com/mudcube/Loader.js">Github</a>.<br>
 <input value="stop loader" type="button" onclick="loader.stop()" style="font-size: 1em"><br>
 <input value="new message" type="button" onclick="loader.message('loading...');" style="font-size: 1em"><br>
 <input value="new message w/ progress" type="button" onclick="messageWithProgress('test', 2)" style="font-size: 1em">
