few tweaks for new version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>Loader.js</title>
 </head>
 <body>
+<style type="text/css">
+body { line-height: 2em; }
+</style>
 <script type="text/javascript">
 
 var loader;
