bug fix and improve demo

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@ body { line-height: 2em; }
 <script type="text/javascript">
 
 var loader;
+var testId = 0;
 var messageWithProgress = function(message, increment) {
+	/// Setup a random amount of incrementation
+	if (!increment) increment = (Math.random() * 5 >> 0) + 0.5;
 	/// Create a new loader progress, tie this into onProgress event.
 	var progress = 0;
 	/// return the loaderId to be able to remove it.
 	return loader.add({
-		message: message, 
+		message: "test " + (testId++), 
 		getProgress: function() {
 			return progress += increment;
 		}
@@ -25,9 +28,6 @@ var messageWithProgress = function(message, increment) {
 };
 
 window.onload = function() {
-	var progress0 = 0;
-	var progress1 = 0;
-	var progress2 = 0;
 	loader = new widgets.Loader({
 		id: "loader",
 		bars: 12,
@@ -35,6 +35,7 @@ window.onload = function() {
 		lineWidth: 20,
 		lineHeight: 70,
 		background: "rgba(0,0,0,0.5)",
+		container: document.body,
 		timeout: 30, // in seconds
 		oncomplete: function() {
 			console.log("done!");
@@ -45,19 +46,26 @@ window.onload = function() {
 	});
 
 	/// Add a message with progress.
-	var a = messageWithProgress('test 1', 1);
+	var a = messageWithProgress('test', 1);
+
 	/// Remove this message manually... (or you could wait for it to finish)
 	loader.remove(a);
 
 	/// Like these two ones...
-	var b = messageWithProgress('test 2', 2);
-	var c = messageWithProgress('test 3', 3);
+	var b = messageWithProgress('test', 2);
+
+	/// Add some tests before the previous ones complete.
+	setTimeout(function() {
+		var c = messageWithProgress('test', 1);
+		var d = messageWithProgress('test', 2);
+		var e = messageWithProgress('test', 3);
+	}, 1000)
 };
 
 </script>
 Fork on <a href="https://github.com/mudcube/Loader.js">Github</a>.<br>
 <input value="stop loader" type="button" onclick="loader.stop()" style="font-size: 1em"><br>
 <input value="new message" type="button" onclick="loader.message('loading...');" style="font-size: 1em"><br>
-<input value="new message w/ progress" type="button" onclick="messageWithProgress('test', 2)" style="font-size: 1em">
+<input value="new message w/ progress" type="button" onclick="messageWithProgress('test')" style="font-size: 1em">
 </body>
 </html>
