tweak how timeout is handled (only for progress events)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ window.onload = function() {
 	var b = messageWithProgress('test', 2);
 
 	/// Add some tests before the previous ones complete.
-	setTimeout(function() {
+	window.setTimeout(function() {
 		var c = messageWithProgress('test', 1);
 		var d = messageWithProgress('test', 2);
 		var e = messageWithProgress('test', 3);
