--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script src="./Loader.js" type="text/javascript"></script>
+	<script src="./js/Widgets/Loader.js" type="text/javascript"></script>
 	<title>Loader.js</title>
 </head>
 <body>
